refactor : 라우트 설정 바꿈, ie to Edge 주석처리

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script>
+    <!-- <script>
       if(/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
         
       alert('해당 시스템은 구 버전의 브라우저를 지원하지 않습니다. 크롬 혹은 엣지를 통해 접속해주세요.');
@@ -23,7 +23,7 @@
     
       }else {
       }
-    </script>
+    </script> -->
     <title>React App</title>
   </head>
   <body>
