0601 index.html title 변경

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       } else {
       }
     </script>
-    <title>React App</title>
+    <title>통합 안전관리 모니터링 시스템</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
