--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -22,7 +24,7 @@
       } else {
       }
     </script>
-    <title>React App</title>
+    <title>통합 안전관리 모니터링 시스템</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
