0611 모바일 커밋

--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,18 @@
       content="Web site created using create-react-app"
     />
     <script>
-      if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
-        alert(
-          "해당 시스템은 구 버전의 브라우저를 지원하지 않습니다. 크롬 혹은 엣지를 통해 접속해주세요."
-        );
+      // if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
+      //   alert(
+      //     "해당 시스템은 구 버전의 브라우저를 지원하지 않습니다. 크롬 혹은 엣지를 통해 접속해주세요."
+      //   );
 
-        window.location = "microsoft-edge:" + window.location;
+      //   window.location = "microsoft-edge:" + window.location;
 
-        setTimeout(function () {
-          window.location = "https://go.microsoft.com/fwlink/?linkid=2135547";
-        }, 1);
-      } else {
-      }
+      //   setTimeout(function () {
+      //     window.location = "https://go.microsoft.com/fwlink/?linkid=2135547";
+      //   }, 1);
+      // } else {
+      // }
     </script>
     <title>통합 안전관리 모니터링 시스템</title>
   </head>
@@ -31,3 +31,5 @@
     <div id="root"></div>
   </body>
 </html>
+
+
